How to get a release candidate tarball in /tmp:

  ver=3.1.5
  cd /tmp
  svn export svn://repo.hu/pcb-rnd/trunk pcb-rnd-$ver
  tar -cf pcb-rnd-$ver.tar pcb-rnd-$ver

Packaging changes between 3.1.5 and 3.1.4
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

A. changes that probably don't need action

(none)

B. changes that probably DO need action

1. Bump dependency version: pcb-rnd now depends on librnd >= 4.2.0

2. new plugin export_hpgl in existing package pcb-rnd-export

3. new config file: $C/draw_pnp.conf

4. new ./configure line


Packaging changes between 3.1.4 and 3.1.3
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

A. changes that probably don't need action

(none)

B. changes that probably DO need action

1. Bump dependency version: pcb-rnd now depends on librnd >= 4.1.0


Packaging changes between 3.1.3 and 3.1.2
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

A. changes that probably don't need action

(none)

B. changes that probably DO need action

(none)

Packaging changes between 3.1.2 and 3.1.1
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

A. changes that probably don't need action

1. gsch2pcb-rnd got replaced by a dummy that makes suggestions to
   the user how to switch to a better alternative; both the binary
   and the man page remains, but are replaced by dummies.

B. changes that probably DO need action

1. new config file in package pcb-rnd-export:
   $C/export_bom.conf

Packaging changes between 3.1.1 and 3.1.0
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

A. changes that probably don't need action

1. a lot more files are installed in the docdir: the whole resources/
   dir, making installed doc more self-contained (mostly due to logo graphics)

2. a lot more files are installed in the footprint dir: openscad scripts for
   3d models of the static footprints

B. changes that probably DO need action

(none)


Packaging changes between 3.1.0 and 3.0.6
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

A. changes that probably don't need action

(none)
