@@ -19,7 +19,7 @@
 <tr><th>pcb-rnd-io-standard<td> pcb-rnd-core pcb-rnd-lib-io<td> io_pcb io_tedax
 <tr><th>pcb-rnd-lib-gui<td> pcb-rnd-core librnd4-lib-gui<td> dialogs draw_fontsel lib_hid_pcbui
 <tr><th>pcb-rnd-core<td> librnd4<td>(builtin:  act_draw act_read autocrop ch_editpoint ch_onpoint ddraft draw_csect draw_fab draw_pnp drc_query extedit exto_std fp_board fp_fs io_lihata lib_compat_help lib_formula lib_polyhelp mincut propedit query report rubberband_orig shape show_netnames tool_std)
-<tr><th>pcb-rnd-io-alien<td> pcb-rnd-core pcb-rnd-lib-io pcb-rnd-extra librnd4<td> io_autotrax io_bxl io_dsn io_eagle io_hyp io_kicad io_kicad_legacy io_pads
+<tr><th>pcb-rnd-io-alien<td> pcb-rnd-core pcb-rnd-lib-io pcb-rnd-extra librnd4<td> io_autotrax io_bxl io_dsn io_eagle io_easyeda io_hyp io_kicad io_kicad_legacy io_pads
 <tr><th>pcb-rnd-cloud<td> pcb-rnd-core librnd4-cloud pcb-rnd-export<td> fp_wget order order_pcbway
 <tr><th>pcb-rnd-export-extra<td> pcb-rnd-core pcb-rnd-export<td> export_fidocadj export_ipcd356 export_lpr export_oldconn export_stl
 <tr><th>pcb-rnd-extra<td> pcb-rnd-core<td> distalign djopt fontmode jostle polycombine polystitch puller renumber shand_cmd teardrops vendordrill
@@ -39,7 +39,7 @@
 <tr><th>pcb-rnd-io-standard<td> $P/io_pcb.pup $P/io_pcb.so $P/io_tedax.pup $P/io_tedax.so <i></i><td>	Commonly used non-native board and footprint file formats<td> 	Plugins for tEDAx footprint format and the gEDA/PCB file formats 	(footprint and board).  
 <tr><th>pcb-rnd-lib-gui<td> $P/dialogs.pup $P/dialogs.so $P/draw_fontsel.pup $P/draw_fontsel.so $P/lib_hid_pcbui.pup $P/lib_hid_pcbui.so <i>$C/adialogs.conf</i><td>	Support library for building the GUI.<td> 	Provides pcb-rnd specific dialog boxes (e.g. fontsel) and top 	window GUI elements.  
 <tr><th>pcb-rnd-core<td> $PREFIX/bin/pcb-rnd $PREFIX/share/man/man1/pcb-rnd.1 $C/conf_core.lht $C/menu-default.lht $PREFIX/share/pcb-rnd/default2.lht $PREFIX/share/pcb-rnd/default4.lht $PREFIX/share/pcb-rnd/default_font $PREFIX/bin/fp2preview $PREFIX/bin/fp2subc $PREFIX/bin/pcb-prj2lht $PREFIX/share/man/man1/fp2preview.1 $PREFIX/share/man/man1/fp2subc.1 $PREFIX/share/man/man1/pcb-prj2lht.1 $PREFIX/share/pcb-rnd/footprint/* <i>$C/ch_editpoint.conf $C/draw_pnp.conf $C/drc_query.conf $C/fp_fs.conf $C/show_netnames.conf</i><td>	pcb-rnd executable with the core functionality<td> 	Includes the data model, the most common action commands, the native file 	format. Can be used in headless mode or batch/scripted mode for automated 	processing or with GUI (if pcb-rnd-lib-gui and librnd GUI HIDs are installed).  
-<tr><th>pcb-rnd-io-alien<td> $P/io_autotrax.pup $P/io_autotrax.so $P/io_bxl.pup $P/io_bxl.so $P/io_dsn.pup $P/io_dsn.so $P/io_eagle.pup $P/io_eagle.so $P/io_hyp.pup $P/io_hyp.so $P/io_kicad.pup $P/io_kicad.so $P/io_kicad_legacy.pup $P/io_kicad_legacy.so $P/io_pads.pup $P/io_pads.so $PREFIX/share/man/man1/txt2bxl.1 $PREFIX/share/man/man1/bxl2txt.1 $PREFIX/bin/txt2bxl $PREFIX/bin/bxl2txt <i>$C/io_pads.conf</i><td>	File format compatibility with other PCB layout designers.<td> 	Load and/or save boards in file formats supported by other 	EDA tools, such as KiCAD, Eagle, protel/autotrax, etc.  
+<tr><th>pcb-rnd-io-alien<td> $P/io_autotrax.pup $P/io_autotrax.so $P/io_bxl.pup $P/io_bxl.so $P/io_dsn.pup $P/io_dsn.so $P/io_eagle.pup $P/io_eagle.so $P/io_easyeda.pup $P/io_easyeda.so $P/io_hyp.pup $P/io_hyp.so $P/io_kicad.pup $P/io_kicad.so $P/io_kicad_legacy.pup $P/io_kicad_legacy.so $P/io_pads.pup $P/io_pads.so $PREFIX/share/man/man1/txt2bxl.1 $PREFIX/share/man/man1/bxl2txt.1 $PREFIX/bin/txt2bxl $PREFIX/bin/bxl2txt <i>$C/io_easyeda.conf $C/io_pads.conf</i><td>	File format compatibility with other PCB layout designers.<td> 	Load and/or save boards in file formats supported by other 	EDA tools, such as KiCAD, Eagle, protel/autotrax, etc.  
 <tr><th>pcb-rnd-cloud<td> $P/fp_wget.pup $P/fp_wget.so $P/order.pup $P/order.so $P/order_pcbway.pup $P/order_pcbway.so <i>$C/fp_wget.conf $C/order.conf $C/order_pcbway.conf</i><td>	Networking plugins.<td> 	'Cloud' footprint access plugin that integrates edakrill and gedasymbols.org.  
 <tr><th>pcb-rnd-export-extra<td> $P/export_fidocadj.pup $P/export_fidocadj.so $P/export_ipcd356.pup $P/export_ipcd356.so $P/export_lpr.pup $P/export_lpr.so $P/export_oldconn.pup $P/export_oldconn.so $P/export_stl.pup $P/export_stl.so <i></i><td>	Export formats: special/extra<td> 	Less commonly used export formats: fidocadj, ipc-356-d, stl, 	old geda connection list format, direct printing with lpr.  
 <tr><th>pcb-rnd-extra<td> $P/distalign.pup $P/distalign.so $P/djopt.pup $P/djopt.so $P/fontmode.pup $P/fontmode.so $P/jostle.pup $P/jostle.so $P/polycombine.pup $P/polycombine.so $P/polystitch.pup $P/polystitch.so $P/puller.pup $P/puller.so $P/renumber.pup $P/renumber.so $P/shand_cmd.pup $P/shand_cmd.so $P/teardrops.pup $P/teardrops.so $P/vendordrill.pup $P/vendordrill.so <i></i><td>	Extra action commands and optional functionality.<td> 	Align objects in grid, optimize tracks, font editor, combine polygons, 	renumber subcircuits, apply vendor drill mapping.  
@@ -100,6 +100,7 @@
 --buildin-lib_formula
 --buildin-extedit
 --buildin-draw_pnp
+--plugin-io_easyeda
 --plugin-export_excellon
 --plugin-export_fidocadj
 --plugin-export_lpr
